# stm32-base-project

./: .clang-tidy  .cppcheck  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  Makefile  README.md  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt  setup_build_environment_on_ubuntu_22.sh  setup_documentation_environment_on_ubuntu_22.sh
.github/workflows/: ci.yaml  ubuntu_2204_build_pipeline.yml  ubuntu_2204_documentation_pipeline.yml
cmake_modules/: AddLibraryUnitTest.cmake  CMakeGraphVizOptions.cmake  Colors.cmake  ConvertPlantumlDiagrams.cmake  CreateLatexDocument.cmake  CreateLibrary.cmake  GenerateGitHashAtBuildTime.cmake  GenerateGitHashAtConfigTime.cmake  Packaging.cmake  Processes.cmake
conan_profiles/: linux-x86
desktop_client/: CMakeLists.txt  main.cpp  version.hpp.in
desktop_client/application/: CMakeLists.txt  main.cpp
desktop_client/device_handler/: CMakeLists.txt
desktop_client/device_handler/benchmark/: CMakeLists.txt  device_handler_benchmark.cpp
desktop_client/device_handler/src/: device_handler.cpp
desktop_client/device_handler/tests/: CMakeLists.txt  test_cleanup.sh  unit_test.cpp
desktop_client/libs/: CMakeLists.txt
desktop_client/libs/device_handler/: CMakeLists.txt
desktop_client/libs/device_handler/benchmark/: CMakeLists.txt  device_handler_benchmark.cpp
desktop_client/libs/device_handler/include/device_handler/: device_handler.h  os_abstraction_layer.h  os_abstraction_layer_interface.h
desktop_client/libs/device_handler/src/: device_handler.cpp  os_abstraction_layer.cpp  os_asbstraction_layer.cpp
desktop_client/libs/device_handler/tests/: CMakeLists.txt  fixtures.h  mocks.h  test_cleanup.sh  test_setup.sh  unit_test.cpp  utils.h
desktop_client/probelibrary/benchmark/: CMakeLists.txt
desktop_client/probelibrary/include/: probe.h
desktop_client/probelibrary/tests/: CMakeLists.txt  probe_benchmark.cpp  unit_test.cpp
desktop_client/system_interfaces/: CMakeLists.txt
desktop_client/system_interfaces/messages/: CMakeLists.txt
desktop_client/system_interfaces/messages/include/messages/: communication_message.h
desktop_client/system_interfaces/serializer/: CMakeLists.txt
desktop_client/system_interfaces/serializer/include/serializer/: serializer.h
desktop_client/system_interfaces/serializer/src/: serializer.cpp
desktop_client/system_interfaces/serializer/tests/: CMakeLists.txt  unit_test.cpp
documentation/: CMakeLists.txt  code_documentation.doxygen.in  requirements_document.tex
documentation/development_process/: CMakeLists.txt
documentation/development_process/software_build_process/: CMakeLists.txt  index.html.in
documentation/doxygen/: CMakeLists.txt  code_documentation.doxygen.in
documentation/requirements_engineering/: CMakeLists.txt  font.tex  library.bib  newcommand.tex  parameters.tex  requirements_document.tex  title_format.tex  use_cases.tex
documentation/requirements_engineering/diagrams/: pc_mcu_interaction_diagram.plantuml
project/: CMakeLists.txt
project/probelibrary/: CMakeLists.txt
project/probelibrary/benchmark/: probe_benchmark.cpp
project/probelibrary/src/: probe.cpp
scripts/: build.sh  clean.sh  client_system_setup_after_installation.sh  configure.sh  document.sh  packaging.sh  test.sh  validate.sh
test/: CMakeLists.txt  test_gtest_based.cpp  test_main.cpp  test_script.sh
