SET (DESKTOP_CLIENT_APP_NAME desktop_client)
PROJECT (${DESKTOP_CLIENT_APP_NAME} LANGUAGES CXX)
SET (CMAKE_CXX_STANDARD 14)
SET (CMAKE_CXX_EXTENSIONS OFF)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_SUBDIRECTORY (system_interfaces)
ADD_SUBDIRECTORY (libs)
ADD_SUBDIRECTORY (application)

INCLUDE (Processes)
