ENABLE_TESTING ()

IF (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
  ADD_DEFINITIONS (-DDEBUG)
  SET (GCC_COVERAGE_COMPILE_FLAGS
       "-g -O0 -coverage -fprofile-arcs -ftest-coverage")
  SET (GCC_COVERAGE_LINK_FLAGS "-coverage -lgcov")
ENDIF ()

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
SET (CMAKE_EXE_LINKER_FLAGS
     "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")

SET (LIBNAME device_handler)
SET (LIBSRC src/device_handler.cpp)
SET (LIBHDRS include/device_handler.h)

ADD_LIBRARY (${LIBNAME} SHARED ${LIBSRC})

TARGET_INCLUDE_DIRECTORIES (
  ${LIBNAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
                    $<INSTALL_INTERFACE:include>)
TARGET_LINK_LIBRARIES (${LIBNAME} --coverage)
SET_TARGET_PROPERTIES (${LIBNAME} PROPERTIES PUBLIC_HEADER "${LIBHDRS}")
SET_TARGET_PROPERTIES (${LIBNAME} PROPERTIES RESOURCE "")
INSTALL (
  TARGETS ${LIBNAME}
  PUBLIC_HEADER DESTINATION include/${LIBNAME}
  LIBRARY DESTINATION lib/${LIBNAME} COMPONENT Libraries)

ADD_SUBDIRECTORY (tests)
IF (${CMAKE_BUILD_TYPE} STREQUAL "Release")
  ADD_SUBDIRECTORY (benchmark)
ENDIF ()
