ENABLE_TESTING ()
SET (LIBNAME probe)
SET (LIBSRC src/probe.cpp)
SET (LIBHDRS include/probe.h)

ADD_LIBRARY (${LIBNAME} SHARED ${LIBSRC})

TARGET_INCLUDE_DIRECTORIES (
  ${LIBNAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
                    $<INSTALL_INTERFACE:include>)
SET_TARGET_PROPERTIES (${LIBNAME} PROPERTIES PUBLIC_HEADER "${LIBHDRS}")
SET_TARGET_PROPERTIES (${LIBNAME} PROPERTIES RESOURCE "")
INSTALL (
  TARGETS ${LIBNAME}
  PUBLIC_HEADER DESTINATION include/${LIBNAME}
  LIBRARY DESTINATION lib/${LIBNAME} COMPONENT Libraries)

ADD_SUBDIRECTORY (tests)
ADD_SUBDIRECTORY (benchmark)
