# SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")
SET (GCC_COVERAGE_COMPILE_FLAGS
     "-g -O0 -coverage -fprofile-arcs -ftest-coverage")
SET (GCC_COVERAGE_LINK_FLAGS "-coverage -lgcov")

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
SET (CMAKE_EXE_LINKER_FLAGS
     "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
FIND_PACKAGE (GTest REQUIRED)
INCLUDE_DIRECTORIES (${GTEST_INCLUDE_DIRS})
ADD_EXECUTABLE (probe_unittest unit_test.cpp)
TARGET_LINK_LIBRARIES (probe_unittest probe ${GTEST_BOTH_LIBRARIES} --coverage)
ADD_TEST (NAME probe_unit COMMAND probe_unittest)
SET_TESTS_PROPERTIES (probe_unit PROPERTIES FIXTURES_REQUIRED unit_tests)
SET (PROBE_BENCHMARKDIR ${CMAKE_CURRENT_BINARY_DIR})
